[gd_scene load_steps=27 format=2]

[ext_resource path="res://assets/Congrat/Panel.png" type="Texture" id=1]
[ext_resource path="res://assets/Congrat/Icon_Home.png" type="Texture" id=2]
[ext_resource path="res://assets/Congrat/Circle2_White2.png" type="Texture" id=3]
[ext_resource path="res://assets/Congrat/Title.png" type="Texture" id=4]
[ext_resource path="res://assets/Congrat/You win.png" type="Texture" id=5]
[ext_resource path="res://assets/Congrat/Circle10_White2.png" type="Texture" id=6]
[ext_resource path="res://assets/Congrat/Icon_Again.png" type="Texture" id=7]
[ext_resource path="res://assets/Congrat/Icon_Next5.png" type="Texture" id=8]
[ext_resource path="res://assets/fonts/A001ff-Bold.otf" type="DynamicFontData" id=9]
[ext_resource path="res://assets/Congrat/Total_Move.png" type="Texture" id=10]
[ext_resource path="res://scripts/Victory.gd" type="Script" id=11]
[ext_resource path="res://scene/SceneTransition.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/sound/Komiku_-_04_-_Shopping_List.mp3" type="AudioStream" id=13]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 1920, 1080 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 516, 81 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 150, 150 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 180, 180 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 150, 150 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 150, 150 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 180, 180 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 150, 150 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 150, 150 )

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 180, 180 )

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 150, 150 )

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 489, 224 )

[sub_resource type="DynamicFont" id=13]
size = 84
font_data = ExtResource( 9 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.185
anchor_right = 0.5
anchor_bottom = 0.185
margin_left = -400.0
margin_top = -99.8
margin_right = 400.0
margin_bottom = 100.2
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.694
anchor_right = 0.5
anchor_bottom = 0.694
margin_left = -600.0
margin_top = -199.52
margin_right = 600.0
margin_bottom = 200.48
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next" type="Button" parent="Panel/Panel"]
margin_left = 760.0
margin_top = 70.0
margin_right = 1020.0
margin_bottom = 330.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Panel/Panel/Next"]
margin_left = 35.0
margin_top = 30.0
margin_right = 235.0
margin_bottom = 230.0
rect_min_size = Vector2( 200, 200 )
texture = ExtResource( 8 )
expand = true

[node name="Replay" type="Button" parent="Panel/Panel"]
margin_left = 460.0
margin_top = 70.0
margin_right = 720.0
margin_bottom = 330.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Panel/Panel/Replay"]
margin_left = 30.0
margin_top = 30.0
margin_right = 230.0
margin_bottom = 230.0
rect_min_size = Vector2( 200, 200 )
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Home" type="Button" parent="Panel/Panel"]
margin_left = 150.0
margin_top = 70.0
margin_right = 410.0
margin_bottom = 330.0
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Panel/Panel/Home"]
margin_left = 35.0
margin_top = 30.0
margin_right = 235.0
margin_bottom = 230.0
rect_min_size = Vector2( 200, 200 )
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="Panel"]
anchor_left = 0.482
anchor_top = 0.428
anchor_right = 0.482
anchor_bottom = 0.428
margin_left = -305.337
margin_top = -154.667
margin_right = 294.663
margin_bottom = 70.3335
custom_styles/panel = SubResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel"]
anchor_left = 0.604
anchor_top = 0.426
anchor_right = 0.604
anchor_bottom = 0.426
margin_left = -68.6168
margin_top = -92.5065
margin_right = 59.3832
margin_bottom = 7.49347
rect_min_size = Vector2( 100, 100 )
custom_fonts/font = SubResource( 13 )
text = ": 154"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SceneTransition" parent="." instance=ExtResource( 12 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
autoplay = true

[connection signal="pressed" from="Panel/Panel/Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="Panel/Panel/Replay" to="." method="_on_Replay_pressed"]
[connection signal="pressed" from="Panel/Panel/Home" to="." method="_on_Home_pressed"]
